[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameButton.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "MouseHoverOverButton"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Button/Highlight:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.0853776, 0.0717937 ),
"update": 0,
"values": [ Vector2( 0, 26 ), Vector2( 164, 26 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Button/Highlight:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 26 ) ]
}

[node name="GameButton" type="Control"]
margin_right = 164.0
margin_bottom = 240.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7

[node name="Button" type="ColorRect" parent="."]
margin_top = 210.0
margin_right = 164.0
margin_bottom = 240.0
color = Color( 0.137255, 0.133333, 0.141176, 1 )

[node name="Highlight" type="ColorRect" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 26.0
mouse_filter = 2
color = Color( 0.2, 0.27451, 0.333333, 1 )

[node name="Label" type="Label" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Lbael"
align = 1
valign = 1

[node name="ProgressBar" type="ColorRect" parent="Button"]
margin_top = 26.0
margin_right = 164.0
margin_bottom = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MouseHoverOverButton = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="gui_input" from="Button" to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
